--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
             <!--<scope>test</scope>-->
         </dependency>
 
+        <!--Twitter dependency-->
+            <dependency>
+                <groupId>com.twitter</groupId>
+                <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
+                <version>2.2.0</version> <!-- or whatever the latest version is -->
+            </dependency>
+
 
     </dependencies>
     <properties>
